<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/bg"
    android:gravity="center_horizontal">
    <include layout = "@layout/tab_kuis">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:background="@drawable/header">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keProfil"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="30dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/kotak">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil"
                android:textSize="@dimen/fntBsr"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isiProfil"
                android:textSize="@dimen/sub">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="@drawable/user2">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keToDo"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/kotak">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toDoList"
                android:textSize="@dimen/fntBsr"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isiToDo"
                android:textSize="@dimen/sub">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:orientation="horizontal"
            android:background="@drawable/menu1"
            android:layout_marginTop="-20dp"
            android:layout_marginLeft="10dp">
        </LinearLayout>
    </LinearLayout>

</LinearLayout>